파일 쪼개기 완료 이후에 MPD파일 만들기 시작중 Reactive 로 코드 쳐보기는 다음주 쯤에.. 현재는 MPD파일 태그 순서 정하기 하는 중

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+lo
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,6 +59,12 @@
 			<version>1.22</version>
 		</dependency>
 
+		<!-- xml 만드는 라이브러리 이거 좋아보이는디?-->
+		<dependency>
+			<groupId>com.jcabi.incubator</groupId>
+			<artifactId>xembly</artifactId>
+			<version>0.22</version>
+		</dependency>
 
 	</dependencies>
 
